--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 104,
    "id": "81ad327b-bd53-4f26-aa28-eed08b9e2e9d",
    "metadata": {},
    "outputs": [
@@ -11,73 +11,82 @@
      "output_type": "stream",
      "text": [
       "S16_C16_N1000:\n",
-      "  cost_model_rfs_bay_exc_w_update: 17x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 12x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 1x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 24x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '24x; 25x; 24x; '\n",
       "S16_C16_N150:\n",
-      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '24x; 25x; 23x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '24x; 22x; 22x; '\n",
       "S16_C16_N50:\n",
-      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 24x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 25x; 25x; '\n",
       "S2_C2_N1000:\n",
-      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '24x; 25x; 25x; '\n",
+      "S2_C2_N150:\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '24x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 24x; 25x; '\n",
       "S2_C2_N50:\n",
-      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 25x; 25x; '\n",
       "S8_C2_N1000:\n",
-      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '10x; 21x; 22x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '19x; 19x; 20x; '\n",
       "S8_C2_N150:\n",
-      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '24x; 24x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '23x; 21x; 22x; '\n",
       "S8_C2_N50:\n",
-      "  cost_model_rfs_bay_exc_w_update: 25x;\n",
-      "  cost_model_rfs_bay_exc_w_update_cluster: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update: 25x;\n",
-      "  cost_model_rfs_rs_exc_w_update_cluster: 25x;\n",
+      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 25x; '\n",
+      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 25x; 25x; '\n",
       "\n",
-      "S16_C16_N1000: 55\n",
-      "S16_C16_N150: 100\n",
-      "S16_C16_N50: 100\n",
-      "S2_C2_N1000: 100\n",
-      "S2_C2_N50: 100\n",
-      "S8_C2_N1000: 100\n",
-      "S8_C2_N150: 100\n",
-      "S8_C2_N50: 100\n",
+      "S16_C16_N1000: 147\n",
+      "S16_C16_N150: 140\n",
+      "S16_C16_N50: 149\n",
+      "S2_C2_N1000: 149\n",
+      "S2_C2_N150: 148\n",
+      "S2_C2_N50: 150\n",
+      "S8_C2_N1000: 111\n",
+      "S8_C2_N150: 139\n",
+      "S8_C2_N50: 150\n",
       "\n",
-      "Total Transfer Count : 755\n"
+      "Total Transfer Count : 1283\n"
      ]
     }
    ],
    "source": [
-    "# import pandas as pd\n",
+    "import pandas as pd\n",
     "import glob\n",
     "import yaml\n",
     "\n",
     "\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_6250k/*/*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/cost*/*.csv')\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k_shorter_runs/*/*/*.csv')\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_175k/*/*/*.csv')\n",
+    "algos_to_view = [\n",
+    "        #\"cost_model_rfs_rs_exc_cluster_update_net_trans\",\n",
+    "        #\"cost_model_rfs_rs_exc_cluster_update_only_hist\",\n",
     "\n",
+    "        #\"cost_model_rfs_bay_exc_cluster_update_net_trans\",\n",
+    "        #\"cost_model_rfs_bay_exc_cluster_update_only_hist\",\n",
+    "    \n",
+    "        #\"cost_model_rfs_rs_exc_cluster_update_net_trans_currated_data\",\n",
+    "        #\"cost_model_rfs_rs_exc_cluster_update_only_hist_currated_data\",\n",
+    "    \n",
     "\n",
+    "        #\"cost_model_gdb_rs_exc_cluster_update_net_trans\",\n",
+    "        #\"cost_model_gdb_rs_exc_cluster_update_only_hist\",\n",
     "\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans\",\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist\",\n",
+    "\n",
+    "        \"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned\",\n",
+    "        \"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned\",\n",
+    "    \n",
+    "        #\"tlbo_rgpe_prf\",\n",
+    "        #\"tlbo_topov3_prf\",\n",
+    "        #\"quantile\",\n",
+    "        #\"bayesian_open_box\",\n",
+    "        #\"random_search_syne_tune\"\n",
+    "\n",
+    "]\n",
     "\n",
     "all_envs = []\n",
     "all_algos = []\n",
@@ -92,11 +101,19 @@
     "\n",
     "    env = file.split(\"\\\\\")[-3]\n",
     "    algo = file.split(\"\\\\\")[-2]\n",
-    "    count = len(df[df['time'] > 0])\n",
+    "    count = len(df[df['transfer_id'] > 0])\n",
     "\n",
+    "    #if algo not in algos_to_view:\n",
+    "    #    continue\n",
+    "\n",
+    "    if not any(a in algo for a in algos_to_view):\n",
+    "        continue\n",
+    "    if \"_hist_ratio\" in algo:\n",
+    "        continue\n",
+    "\n",
+    "\n",
+    "    \n",
     "    total_count = total_count + count\n",
-    "\n",
-    "    #print(\"Env : \"+str(env)+\"   Algo : \"+str(algo)+\"   Count : \"+str(count))\n",
     "    \n",
     "    if env not in dict_overview.keys() :\n",
     "        dict_overview[env] = dict()\n",
@@ -106,7 +123,7 @@
     "    if env not in dict_count_per_env.keys():  \n",
     "        dict_count_per_env[env] = 0\n",
     "    \n",
-    "    dict_overview[env][algo] = dict_overview[env][algo] + \"\" + str(count)+\"x;\"\n",
+    "    dict_overview[env][algo] = dict_overview[env][algo] + \"\" + str(count)+\"x; \"\n",
     "    dict_count_per_env[env] = dict_count_per_env[env] + count\n",
     "\n",
     "print(yaml.dump(dict_overview))\n",
@@ -116,10 +133,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bd1d8ec2-8a88-4554-953a-2febdd41ecaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S16_C16_N10000_random_samples : 4\n",
+      "S16_C16_N1000_random_samples : 325\n",
+      "S16_C16_N100_random_samples : 42\n",
+      "S16_C16_N150_random_samples : 325\n",
+      "S16_C16_N200_random_samples : 62\n",
+      "S16_C16_N20_random_samples : 57\n",
+      "S16_C16_N300_random_samples : 64\n",
+      "S16_C16_N400_random_samples : 64\n",
+      "S16_C16_N500_random_samples : 43\n",
+      "S16_C16_N50_random_samples : 325\n",
+      "S16_C16_N600_random_samples : 64\n",
+      "S16_C16_N700_random_samples : 65\n",
+      "S16_C16_N800_random_samples : 65\n",
+      "S16_C16_N900_random_samples : 65\n",
+      "S16_C2_N1000_random_samples : 60\n",
+      "S16_C4_N1000_random_samples : 325\n",
+      "S16_C4_N150_random_samples : 325\n",
+      "S16_C4_N50_random_samples : 325\n",
+      "S16_C8_N1000_random_samples : 325\n",
+      "S16_C8_N150_random_samples : 325\n",
+      "S16_C8_N50_random_samples : 325\n",
+      "S2_C16_N1000_random_samples : 66\n",
+      "S2_C2_N1000_random_samples : 325\n",
+      "S2_C2_N150_random_samples : 325\n",
+      "S2_C2_N50_random_samples : 350\n",
+      "S2_C4_N1000_random_samples : 65\n",
+      "S2_C8_N1000_random_samples : 325\n",
+      "S2_C8_N150_random_samples : 325\n",
+      "S2_C8_N50_random_samples : 350\n",
+      "S4_C16_N1000_random_samples : 325\n",
+      "S4_C16_N150_random_samples : 325\n",
+      "S4_C16_N50_random_samples : 350\n",
+      "S4_C2_N1000_random_samples : 65\n",
+      "S4_C4_N1000_random_samples : 64\n",
+      "S4_C4_N150_random_samples : 20\n",
+      "S4_C4_N50_random_samples : 20\n",
+      "S4_C8_N1000_random_samples : 64\n",
+      "S8_C16_N1000_random_samples : 65\n",
+      "S8_C2_N1000_random_samples : 325\n",
+      "S8_C2_N150_random_samples : 325\n",
+      "S8_C2_N50_random_samples : 348\n",
+      "S8_C4_N1000_random_samples : 65\n",
+      "S8_C8_N1000_random_samples : 324\n",
+      "S8_C8_N150_random_samples : 325\n",
+      "S8_C8_N50_random_samples : 350\n",
+      "\n",
+      "Total Random Sample Count : 9071\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import glob\n",
@@ -134,11 +205,7 @@
     "for file in all_files:\n",
     "    df = pd.read_csv(file)\n",
     "\n",
-    "    #if \"N1000\" not in file:\n",
-    "    #if \"S16_C16_N\" not in file:\n",
-    "    #    continue\n",
-    "    \n",
-    "    #df = df[df['time'] > 0]    \n",
+    "   \n",
     "    count = len(df[df['time'].notna()])\n",
     "    #count = len(df['time'])\n",
     "    \n",
@@ -151,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 281,
    "id": "0971ae98-a21c-45cf-a21e-80bf6069b887",
    "metadata": {},
    "outputs": [
@@ -159,12 +226,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "results_random_search_syne_tune_2025-01-19_18-53-43 : 9\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N150\\random_search_syne_tune\\results_random_search_syne_tune_2025-01-19_18-53-43.csv\n",
+      "results_cost_model_rfs_rs_exc_cluster_update_hist_ratio_2025-01-28_01-08-58 : 6\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S16_C16_N150\\cost_model_rfs_rs_exc_cluster_update_hist_ratio\\results_cost_model_rfs_rs_exc_cluster_update_hist_ratio_2025-01-28_01-08-58.csv\n",
       "\n",
       "\n",
-      "results_random_search_syne_tune_2025-01-20_02-51-09 : 8\n",
-      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N150\\random_search_syne_tune\\results_random_search_syne_tune_2025-01-20_02-51-09.csv\n",
+      "results_cost_model_rfs_rs_exc_cluster_update_2025-01-28_12-18-52 : 6\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_cluster_update\\results_cost_model_rfs_rs_exc_cluster_update_2025-01-28_12-18-52.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_cluster_update_net_trans_hist_ratio_2025-01-28_22-10-06 : 6\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_cluster_update_net_trans_hist_ratio\\results_cost_model_rfs_rs_exc_cluster_update_net_trans_hist_ratio_2025-01-28_22-10-06.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_update_hist_ratio_2025-01-28_15-54-50 : 6\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_update_hist_ratio\\results_cost_model_rfs_rs_exc_update_hist_ratio_2025-01-28_15-54-50.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_update_net_trans_hist_ratio_2025-01-28_04-10-09 : 7\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_update_net_trans_hist_ratio\\results_cost_model_rfs_rs_exc_update_net_trans_hist_ratio_2025-01-28_04-10-09.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_update_only_hist_2025-01-28_19-41-10 : 10\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_update_only_hist\\results_cost_model_rfs_rs_exc_update_only_hist_2025-01-28_19-41-10.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_15-47-06 : 6\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_15-47-06.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_19-12-28 : 7\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_2025-01-23_19-12-28.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_13-35-41 : 7\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_13-35-41.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_20-03-39 : 6\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans\\results_cost_model_rfs_rs_exc_w_updatehist_w_ratio_sqr_err_net_trans_2025-01-24_20-03-39.csv\n",
+      "\n",
+      "\n",
+      "results_cost_model_rfs_rs_exc_w_update_clusterhist_w_ratio_sqr_err_net_trans_2025-01-24_15-06-47 : 6\n",
+      "C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k\\S8_C2_N1000\\cost_model_rfs_rs_exc_w_update_clusterhist_w_ratio_sqr_err_net_trans\\results_cost_model_rfs_rs_exc_w_update_clusterhist_w_ratio_sqr_err_net_trans_2025-01-24_15-06-47.csv\n",
       "\n",
       "\n"
      ]
@@ -191,12 +294,12 @@
     "\n",
     "    count_all = len(df['time'])\n",
     "    \n",
-    "    df = df[df['time'] > 0]    \n",
+    "    df = df[df['transfer_id'] > 0]    \n",
     "    \n",
     "    count = len(df[df['time'].notna()])\n",
     "\n",
     "\n",
-    "    if (count_all - count) > 7:\n",
+    "    if (count_all - count) > 5:\n",
     "\n",
     "        print(f\"{file.split('\\\\')[-1].split(\".\")[0]} : {(count_all - count)}\")\n",
     "        print(file)\n",
