--- a/experiments/model_optimizer/notebooks/list_results_files.ipynb
+++ b/experiments/model_optimizer/notebooks/list_results_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 285,
    "id": "81ad327b-bd53-4f26-aa28-eed08b9e2e9d",
    "metadata": {},
    "outputs": [
@@ -11,44 +11,62 @@
      "output_type": "stream",
      "text": [
       "S16_C16_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 24x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '24x; 25x; 24x; '\n",
-      "S16_C16_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '24x; 25x; 23x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '24x; 22x; 22x; '\n",
-      "S16_C16_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 24x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 25x; 25x; '\n",
-      "S2_C2_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 25x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '24x; 25x; 25x; '\n",
-      "S2_C2_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '24x; 25x; 25x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 24x; 25x; '\n",
+      "  asha_syne_tune: '25x; 25x; '\n",
+      "  bayesian_open_box: '25x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "S16_C4_N1000:\n",
+      "  asha_syne_tune: '25x; 25x; '\n",
+      "  bayesian_open_box: '25x; 6x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "S16_C8_N1000:\n",
+      "  asha_syne_tune: '25x; 25x; '\n",
+      "  bayesian_open_box: '25x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
       "S2_C2_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 25x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 25x; 25x; '\n",
-      "S8_C2_N1000:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '10x; 21x; 22x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '19x; 19x; 20x; '\n",
+      "  asha_syne_tune: '25x; 20x; '\n",
+      "  bayesian_open_box: '25x; 7x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "S2_C8_N50:\n",
+      "  asha_syne_tune: '25x; 19x; '\n",
+      "  bayesian_open_box: '25x; 6x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "S4_C16_N50:\n",
+      "  asha_syne_tune: '25x; 25x; '\n",
+      "  bayesian_open_box: '25x; 7x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "S8_C16_N150:\n",
+      "  asha_syne_tune: '25x; 25x; '\n",
+      "  bayesian_open_box: '25x; 8x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
       "S8_C2_N150:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '24x; 24x; 25x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '23x; 21x; 22x; '\n",
-      "S8_C2_N50:\n",
-      "  cost_model_xgb_rs_exc_cluster_update_net_trans_tuned: '25x; 25x; 25x; '\n",
-      "  cost_model_xgb_rs_exc_cluster_update_only_hist_tuned: '25x; 25x; 25x; '\n",
+      "  asha_syne_tune: '25x; 25x; '\n",
+      "  bayesian_open_box: '25x; 8x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
+      "S8_C8_N150:\n",
+      "  asha_syne_tune: '25x; 25x; '\n",
+      "  bayesian_open_box: '25x; 17x; '\n",
+      "  hyperband_syne_tune: '25x; 25x; '\n",
+      "  random_search_syne_tune: '25x; 25x; 25x; '\n",
       "\n",
-      "S16_C16_N1000: 147\n",
-      "S16_C16_N150: 140\n",
-      "S16_C16_N50: 149\n",
-      "S2_C2_N1000: 149\n",
-      "S2_C2_N150: 148\n",
-      "S2_C2_N50: 150\n",
-      "S8_C2_N1000: 111\n",
-      "S8_C2_N150: 139\n",
-      "S8_C2_N50: 150\n",
+      "S16_C16_N1000: 200\n",
+      "S16_C4_N1000: 206\n",
+      "S16_C8_N1000: 200\n",
+      "S2_C2_N50: 202\n",
+      "S2_C8_N50: 200\n",
+      "S4_C16_N50: 207\n",
+      "S8_C16_N150: 208\n",
+      "S8_C2_N150: 208\n",
+      "S8_C8_N150: 217\n",
       "\n",
-      "Total Transfer Count : 1283\n"
+      "Total Transfer Count : 1848\n"
      ]
     }
    ],
@@ -58,7 +76,8 @@
     "import yaml\n",
     "\n",
     "\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/*/*.csv')\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_10_5M_flex/*/*/*.csv')\n",
+    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/results_1310k/*/cost*/*.csv')\n",
     "\n",
     "algos_to_view = [\n",
     "        #\"cost_model_rfs_rs_exc_cluster_update_net_trans\",\n",
@@ -77,9 +96,16 @@
     "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans\",\n",
     "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist\",\n",
     "\n",
-    "        \"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned\",\n",
-    "        \"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned\",\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned\",\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned\",\n",
+    "\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned_1000_curdat\",\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned_1000_curdat\",\n",
+    "\n",
     "    \n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_net_trans_tuned_1000_curdat_more_clusters\",\n",
+    "        #\"cost_model_xgb_rs_exc_cluster_update_only_hist_tuned_1000_curdat_more_clusters\",\n",
+    "        \n",
     "        #\"tlbo_rgpe_prf\",\n",
     "        #\"tlbo_topov3_prf\",\n",
     "        #\"quantile\",\n",
@@ -106,11 +132,13 @@
     "    #if algo not in algos_to_view:\n",
     "    #    continue\n",
     "\n",
-    "    if not any(a in algo for a in algos_to_view):\n",
-    "        continue\n",
-    "    if \"_hist_ratio\" in algo:\n",
-    "        continue\n",
+    "    #if not any(a in algo for a in algos_to_view):\n",
+    "    #    continue\n",
+    "    #if \"_hist_ratio\" in algo:\n",
+    "    #    continue\n",
     "\n",
+    "    if 'update' in algo:\n",
+    "        continue\n",
     "\n",
     "    \n",
     "    total_count = total_count + count\n",
@@ -133,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 125,
    "id": "bd1d8ec2-8a88-4554-953a-2febdd41ecaa",
    "metadata": {},
    "outputs": [
@@ -141,53 +169,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S16_C16_N10000_random_samples : 4\n",
-      "S16_C16_N1000_random_samples : 325\n",
-      "S16_C16_N100_random_samples : 42\n",
-      "S16_C16_N150_random_samples : 325\n",
-      "S16_C16_N200_random_samples : 62\n",
-      "S16_C16_N20_random_samples : 57\n",
-      "S16_C16_N300_random_samples : 64\n",
-      "S16_C16_N400_random_samples : 64\n",
-      "S16_C16_N500_random_samples : 43\n",
-      "S16_C16_N50_random_samples : 325\n",
-      "S16_C16_N600_random_samples : 64\n",
-      "S16_C16_N700_random_samples : 65\n",
-      "S16_C16_N800_random_samples : 65\n",
-      "S16_C16_N900_random_samples : 65\n",
-      "S16_C2_N1000_random_samples : 60\n",
-      "S16_C4_N1000_random_samples : 325\n",
-      "S16_C4_N150_random_samples : 325\n",
-      "S16_C4_N50_random_samples : 325\n",
-      "S16_C8_N1000_random_samples : 325\n",
-      "S16_C8_N150_random_samples : 325\n",
-      "S16_C8_N50_random_samples : 325\n",
-      "S2_C16_N1000_random_samples : 66\n",
-      "S2_C2_N1000_random_samples : 325\n",
-      "S2_C2_N150_random_samples : 325\n",
-      "S2_C2_N50_random_samples : 350\n",
-      "S2_C4_N1000_random_samples : 65\n",
-      "S2_C8_N1000_random_samples : 325\n",
-      "S2_C8_N150_random_samples : 325\n",
-      "S2_C8_N50_random_samples : 350\n",
-      "S4_C16_N1000_random_samples : 325\n",
-      "S4_C16_N150_random_samples : 325\n",
-      "S4_C16_N50_random_samples : 350\n",
-      "S4_C2_N1000_random_samples : 65\n",
-      "S4_C4_N1000_random_samples : 64\n",
-      "S4_C4_N150_random_samples : 20\n",
-      "S4_C4_N50_random_samples : 20\n",
-      "S4_C8_N1000_random_samples : 64\n",
-      "S8_C16_N1000_random_samples : 65\n",
-      "S8_C2_N1000_random_samples : 325\n",
-      "S8_C2_N150_random_samples : 325\n",
-      "S8_C2_N50_random_samples : 348\n",
-      "S8_C4_N1000_random_samples : 65\n",
-      "S8_C8_N1000_random_samples : 324\n",
-      "S8_C8_N150_random_samples : 325\n",
-      "S8_C8_N50_random_samples : 350\n",
+      "S16_C16_N1000_random_samples : 8\n",
+      "S16_C16_N150_random_samples : 8\n",
+      "S16_C16_N50_random_samples : 8\n",
+      "S16_C4_N150_random_samples : 8\n",
+      "S16_C4_N50_random_samples : 8\n",
+      "S16_C8_N150_random_samples : 8\n",
+      "S16_C8_N50_random_samples : 8\n",
+      "S2_C2_N1000_random_samples : 8\n",
+      "S2_C2_N150_random_samples : 8\n",
+      "S2_C2_N50_random_samples : 23\n",
+      "S2_C8_N1000_random_samples : 8\n",
+      "S2_C8_N150_random_samples : 8\n",
+      "S2_C8_N50_random_samples : 20\n",
+      "S4_C16_N1000_random_samples : 8\n",
+      "S4_C16_N150_random_samples : 8\n",
+      "S4_C16_N50_random_samples : 16\n",
+      "S8_C16_N150_random_samples : 8\n",
+      "S8_C16_N50_random_samples : 8\n",
+      "S8_C2_N1000_random_samples : 4\n",
+      "S8_C2_N150_random_samples : 8\n",
+      "S8_C2_N50_random_samples : 8\n",
+      "S8_C8_N1000_random_samples : 8\n",
+      "S8_C8_N150_random_samples : 8\n",
+      "S8_C8_N50_random_samples : 8\n",
       "\n",
-      "Total Random Sample Count : 9071\n"
+      "Total Random Sample Count : 223\n"
      ]
     }
    ],
@@ -196,9 +203,9 @@
     "import glob\n",
     "import yaml\n",
     "\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_*/S*.csv')\n",
-    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_1310k/S*.csv')\n",
-    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_175k/S*.csv')\n",
+    "#all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_1310k/S*.csv')\n",
+    "\n",
+    "all_files = glob.glob('C:/Users/bened/Desktop/Uni/repos/xdbc-client/experiments/model_optimizer/random_samples_10_5M/S*.csv')\n",
     "\n",
     "total_count = 0\n",
     "\n",
@@ -213,7 +220,7 @@
     "\n",
     "    print(f\"{file.split('\\\\')[-1].split(\".\")[0]} : {count}\")\n",
     "\n",
-    "print(\"\\nTotal Random Sample Count : \"+str(total_count))"
+    "print(\"\\nTotal Random Sample Count : \"+str(total_count))#start 8:55"
    ]
   },
   {
